--- a/NeedForCode/src/fr/needforcode/ihm/res/css/design.css
+++ b/NeedForCode/src/fr/needforcode/ihm/res/css/design.css
@@ -18,6 +18,15 @@
 	-fx-border-color: #3e3e3e;
 }
 
+#errorContentPane {
+	-fx-background-color: #990000;
+}
+
+#errorText {
+	-fx-text-fill: white;
+	-fx-font-weight: bold;
+}
+
 /**
  * Boutons de controle : Fermer, réduire, agrandir
  */
@@ -42,7 +51,6 @@
 	-fx-background-color: #404040;
 	-fx-text-fill: #adadad;
 }
-	 
 
 .btn-control-close:hover {
 	-fx-border-insets: 0;
@@ -54,4 +62,23 @@
 	-fx-border-insets: 0;
     -fx-border-width: 1px;
     -fx-border-color: #3e3e3e #3e3e3e #990000 #3e3e3e;
+}
+
+.btn-helper {
+	-fx-background-color: black;
+    -fx-background-radius: 0px;
+    -fx-opacity: 0.2;
+    
+    -fx-text-fill: white;
+	
+	-fx-pref-height: 10px;
+	-fx-pref-width: 10px;
+}
+
+.btn-helper:hover {
+	-fx-opacity: 0.4;
+}
+
+.btn-helper:pressed {
+	-fx-opacity: 0.3;
 }
