--- a/NeedForCode/src/fr/needforcode/ihm/view/CourseRunning.fxml
+++ b/NeedForCode/src/fr/needforcode/ihm/view/CourseRunning.fxml
@@ -8,6 +8,6 @@
 
 <AnchorPane fx:id="courseContainer" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="fr.needforcode.ihm.controller.CourseRunningController">
   <children>
-    <ImageView fx:id="circuitContainer" layoutX="0.0" layoutY="0.0" pickOnBounds="true" />
+    <ImageView fx:id="circuitContainer" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
   </children>
 </AnchorPane>
