--- a/NeedForCode/src/fr/needforcode/ihm/view/MainAppWindowLayout.fxml
+++ b/NeedForCode/src/fr/needforcode/ihm/view/MainAppWindowLayout.fxml
@@ -21,7 +21,7 @@
         </AnchorPane>
       </children>
     </AnchorPane>
-    <BorderPane fx:id="mainContentPane" cache="true" cacheHint="SCALE" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="30.0" />
+    <AnchorPane fx:id="mainContentPane" cache="true" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="30.0" />
     <AnchorPane fx:id="errorContentPane" opacity="1.0" prefHeight="25.0" prefWidth="1280.0" visible="false" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="3.0">
       <children>
         <Text fx:id="errorText" fill="WHITE" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" AnchorPane.leftAnchor="10.0" />
