--- a/NeedForCode/src/fr/needforcode/ihm/view/MainMenuLayout.fxml
+++ b/NeedForCode/src/fr/needforcode/ihm/view/MainMenuLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?scenebuilder-stylesheet ../res/css/design.css?>
 
-<BorderPane fx:id="mainMenu" prefHeight="500.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<BorderPane fx:id="mainMenu" prefHeight="500.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="fr.needforcode.ihm.controller.MainMenuController">
   <!-- TODO Add Nodes -->
   <center>
     <Group id="Group" fx:id="groupButtons">
