Ihm - Chargement dynamique des circuits

--- a/NeedForCode/src/fr/needforcode/ihm/res/css/design.css
+++ b/NeedForCode/src/fr/needforcode/ihm/res/css/design.css
@@ -27,6 +27,17 @@
 	-fx-font-weight: bold;
 }
 
+.check-box {
+	-fx-font-size: 16pt;
+}
+
+.text-input {
+	-fx-background-color: #3e3e3e;
+	-fx-border-color: white;
+	-fx-border-radius: 3px;
+	-fx-text-fill: white;
+}
+
 /**
  * Boutons de controle : Fermer, réduire, agrandir
  */
@@ -123,3 +134,63 @@
  	-fx-background-repeat: no-repeat;
  	-fx-background-position: center;
  }
+ 
+ /**
+  * Boutons formulaires
+  */
+.btn-submit {
+    -fx-padding: 8 15 15 15;
+    -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;
+    -fx-background-radius: 8;
+    -fx-background-color: 
+        linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+        #9d4024,
+        #d86e3a,
+        radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
+    -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );
+    -fx-font-weight: bold;
+    -fx-font-size: 1.1em;
+    -fx-text-fill: white;
+}
+
+.btn-submit:hover {
+    -fx-background-color: 
+        linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+        #9d4024,
+        #d86e3a,
+        radial-gradient(center 50% 50%, radius 100%, #ea7f4b, #c54e2c);
+}
+
+.btn-submit:pressed {
+    -fx-padding: 10 15 13 15;
+    -fx-background-insets: 2 0 0 0,2 0 3 0, 2 0 4 0, 2 0 5 0;
+}
+
+.btn-submit Text {
+    -fx-fill: white;
+    -fx-effect: dropshadow( gaussian , #a30000 , 0,0,0,2 );
+}
+ 
+ /**
+  * Menu configuration course
+  */ 
+  
+#configCourseMenu.label {
+	-fx-font-size: 16pt;
+}
+
+.background-test {
+	-fx-background-color: #3e3e3e;
+}
+
+.title-section-menu {
+  	-fx-text-fill: white;
+  	-fx-font-size: 28pt;
+  	-fx-font-weight: bold;
+	-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.7), 1, 0.0, 0, 0); 	
+}
+ 
+#circuitPreviewPane {
+	-fx-padding: 10;
+	-fx-background-color: #464646;
+}
