--- a/NeedForCode/src/fr/needforcode/ihm/view/CourseRunning.fxml
+++ b/NeedForCode/src/fr/needforcode/ihm/view/CourseRunning.fxml
@@ -5,9 +5,11 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?scenebuilder-stylesheet ../res/css/design.css?>
 
 <AnchorPane fx:id="courseContainer" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="fr.needforcode.ihm.controller.CourseRunningController">
   <children>
     <ImageView fx:id="circuitContainer" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+    <Button fx:id="btnStopCourse" cancelButton="false" defaultButton="false" mnemonicParsing="false" opacity="0.2" styleClass="btn-control, btn-control-run" text="Arrêter la course" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
   </children>
 </AnchorPane>
